# coom

./: .gitignore  README.md  distributed_utils.py  gpt_builders.py  launch.sh  lightning_main.py  main.py  model_provider.py  model_provider_eka.py  pretrain_eka.py  pretrain_gpt.py  pyproject.toml
configs/base_configs/: data_loader_config.yaml  main_config.yaml
configs/model/: llama.sh
coom/: lightning_model.py  train.py
coom/data_module/: eka_datamodule.py
coom/legacy/data/: data_samplers.py
coom/legacy/model/: bert_model.py  fused_softmax.py  gpt_model.py  language_model.py  module.py  multiple_choice.py  t5_model.py  transformer.py
coom/model/: __init__.py  transformer.py
coom/optimizer/: __init__.py  muon.py
coom/training/: arguments.py  async_utils.py  checkpointing.py  global_vars.py  initialize.py  inprocess_restart.py  training.py  utils.py  wandb_utils.py
coom/training/tokenizer/: sft_tokenizer.py  tokenizer.py
